force-app/main/default/objects/ND_Campaign_Event_Nomination__c/ND_Campaign_Event_Nomination__c.object-meta.xml
<CustomObject>
    <description>Houses Campaign Event Nomination Records.</description>
    <label>Campaign Event Nomination</label>
    <nameField>
        <label>Campaign Event Nomination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Event Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>