force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Campaign_Event__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Campaign Event that the Benefactor will be invited to.</inlineHelpText>
    <label>Campaign Event</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Campaign Event record.</errorMessage>
        <filterItems>
            <field>Campaign.RecordTypeId</field>
            <operation>equals</operation>
            <value>Campaign Event</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Event Nominations</relationshipLabel>
    <relationshipName>Campaign_Event_Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>