force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/nd_Campaign_Event_Nomination_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>nd_Campaign_Event_Nomination_Record_URL__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_510, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_510)) &amp; Id, &quot;Record Link&quot;)</formula>
    <label>Campaign Event Nomination Record URL</label>
    <type>Text</type>
</CustomField>