force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Campaign_Where_Members_Were_Created__c.field-meta.xml
<CustomField>
    <fullName>ND_Campaign_Where_Members_Were_Created__c</fullName>
    <description>Stores the ID of the Campaign record where the Constituents from the Household were created as Campaign Members.  This field will be used in the Flow to prevent trying to create duplicate Campaign Member records which will result in an error.</description>
    <label>Campaign Where Members Were Created</label>
    <length>18</length>
    <type>Text</type>
</CustomField>