force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>ND_Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ND_Campaign_Event_Type</valueSetName>
    </valueSet>
</CustomField>