force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Household__c.field-meta.xml
<CustomField>
    <fullName>ND_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household or Organization</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Event Nominations</relationshipLabel>
    <relationshipName>Campaign_Event_Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>