force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/nd_Nomination_Priority__c.field-meta.xml
<CustomField>
    <fullName>nd_Nomination_Priority__c</fullName>
    <label>Nomination Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>