force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Participation__c.field-meta.xml
<CustomField>
    <fullName>ND_Participation__c</fullName>
    <description>Values to define a Constituent or Household participation in an event.</description>
    <inlineHelpText>Values to define a Constituent or Household participation in an event.</inlineHelpText>
    <label>Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Participation</valueSetName>
    </valueSet>
</CustomField>