force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Primary_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>ND_Primary_Relationship_Manager__c</fullName>
    <formula>ND_Household__r.ucinn_ascendv2__PRM__r.FirstName + &quot; &quot; +  ND_Household__r.ucinn_ascendv2__PRM__r.LastName</formula>
    <label>Primary Relationship Manager</label>
    <type>Text</type>
</CustomField>