force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/nd_Status__c.field-meta.xml
<CustomField>
    <fullName>nd_Status__c</fullName>
    <description>Status values that support the Stage field</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>nd_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>nd_Campaign_Event_Status</valueSetName>
    </valueSet>
</CustomField>