force-app/main/default/objects/ND_Campaign_Event_Nomination__c/fields/ND_Strategy__c.field-meta.xml
<CustomField>
    <fullName>ND_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategy</label>
    <referenceTo>ucinn_ascendv2__Strategy__c</referenceTo>
    <relationshipLabel>Campaign Event Nominations</relationshipLabel>
    <relationshipName>Campaign_Event_Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>