force-app/main/default/objects/ND_Campaign_Event_Nomination__c/validationRules/Fundraiser_Participation_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Fundraiser_Participation_Values</fullName>
    <active>true</active>
    <description>Only allow a Fundraiser to select the Status Values including Accepted Verbal Invite, Declined Verbal Invite, Request Alternate Date, or Canceled.</description>
    <errorConditionFormula>AND(

NOT(ISNEW()),

OR(ISPICKVAL( nd_Status__c , &quot;AP&quot;),
ISPICKVAL( nd_Status__c , &quot;Z&quot;),
ISPICKVAL( nd_Status__c , &quot;G&quot;),
ISPICKVAL( nd_Status__c , &quot;A&quot;),
ISPICKVAL( nd_Status__c , &quot;X&quot;)),

NOT(OR(

$Profile.Name = &quot;System Administrator&quot;,
$Permission.Edit_Campaign_Event_Nomination_Status,
$User.ND_Bypass_Duplicate_Rules__c = TRUE)
)

)</errorConditionFormula>
    <errorDisplayField>nd_Status__c</errorDisplayField>
    <errorMessage>Please select a Status value of Accepted Verbal Invite, Declined Verbal Invite, or Request Alternate Date</errorMessage>
</ValidationRule>