force-app/main/default/objects/ND_Campaign_Event_Nomination__c/listViews/My_Campaign_Event_Nominations.listView-meta.xml
<ListView>
    <fullName>My_Campaign_Event_Nominations</fullName>
    <columns>NAME</columns>
    <columns>ND_Strategy__c</columns>
    <columns>ND_Event_Type__c</columns>
    <columns>ND_Fiscal_Year__c</columns>
    <columns>nd_Stage__c</columns>
    <columns>nd_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Campaign Event Nominations</label>
</ListView>