force-app/main/default/objects/ND_Campaign_Event_Nomination__c/listViews/NY_Metro_Nominations.listView-meta.xml
<ListView>
    <fullName>NY_Metro_Nominations</fullName>
    <columns>NAME</columns>
    <columns>nd_Stage__c</columns>
    <columns>nd_Status__c</columns>
    <columns>nd_Nomination_Priority__c</columns>
    <columns>ND_Primary_Relationship_Manager__c</columns>
    <columns>ND_Strategy__c</columns>
    <columns>ND_Event_Type__c</columns>
    <columns>ND_Household__c</columns>
    <columns>ND_Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nd_PRM_Region__c</field>
        <operation>contains</operation>
        <value>Metro</value>
    </filters>
    <filters>
        <field>nd_Status__c</field>
        <operation>notEqual</operation>
        <value>C</value>
    </filters>
    <label>NY Metro Nominations</label>
    <sharedTo>
        <group>Campaign_Administration</group>
        <group>SRD</group>
    </sharedTo>
</ListView>